refactor: fix 9 IntelliJ warnings in McpServer.java
Agent-applied fixes via 'Fix the warnings IntelliJ reported':
- Remove blank line in imports
- Inline always-constant respondError code parameter
- Convert string concatenation to text block
- Remove unused listTestsFallback() method
- Replace collect(toList()) with .toList() (3 sites)
- Simplify unnecessary non-capturing group in regex
- Rename isExcluded() to isIncluded() (always-inverted boolean)